--- a/slides/u1-d01-welcome/u1-d01-welcome.Rmd
+++ b/slides/u1-d01-welcome/u1-d01-welcome.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Welcome!"
-subtitle: "<br><br> Data Science in a Box"
-author: "[datasciencebox.org](https://datasciencebox.org/)"
+title: "Welcome to EAES 494!"
+subtitle: "<br><br> Data Science & Statistics"
+author: "[Gavin McNicol](https://github.com/gavinmcnicol)"
 output:
   xaringan::moon_reader:
     css: ["../xaringan-themer.css", "../slides.css"]
