changed yaml output so that slides can be previewed in RStudio viewer

--- a/slides/u1-d01-welcome/u1-d01-welcome.Rmd
+++ b/slides/u1-d01-welcome/u1-d01-welcome.Rmd
@@ -4,6 +4,7 @@ subtitle: "<br><br> Data Science & Statistics"
 author: "[Gavin McNicol](https://github.com/gavinmcnicol)"
 output:
   xaringan::moon_reader:
+    self_contained: true
     css: ["../xaringan-themer.css", "../slides.css"]
     lib_dir: libs
     nature:
