--- a/slides/u1-d03-toolkit-git/u1-d03-toolkit-git.Rmd
+++ b/slides/u1-d03-toolkit-git/u1-d03-toolkit-git.Rmd
@@ -1,9 +1,10 @@
 ---
 title: "Meet the toolkit:<br>version control and collaboration"
-subtitle: "<br><br> Data Science in a Box"
-author: "[datasciencebox.org](https://datasciencebox.org/)"
+subtitle: "<br><br> Data Science & Statistics"
+author: "[Gavin McNicol](https://github.com/gavinmcnicol)"
 output:
   xaringan::moon_reader:
+    self_contained: true
     css: ["../xaringan-themer.css", "../slides.css"]
     lib_dir: libs
     nature:
