updated welcome introduction slide

--- a/slides/u1-d01-welcome/u1-d01-welcome.Rmd
+++ b/slides/u1-d01-welcome/u1-d01-welcome.Rmd
@@ -24,7 +24,12 @@ library(emo)
 
 class: middle
 
-# Hello world!
+# Gavin McNicol
+McNicol Lab @ UIC
+
+```{r echo=FALSE, out.width="30%", fig.align="left"}
+knitr::include_graphics("img/gavin-headshot.jpeg")
+```
 
 ---
 
