--- a/slides/u1-d01-welcome/u1-d01-welcome.Rmd
+++ b/slides/u1-d01-welcome/u1-d01-welcome.Rmd
@@ -85,6 +85,18 @@ class: middle
 ---
 
 ```{r echo=FALSE, out.width="75%", fig.align="left"}
+knitr::include_graphics("img/npctr.png")
+```
+
+---
+
+```{r echo=FALSE, out.width="75%", fig.align="left"}
+knitr::include_graphics("img/pedons.png")
+```
+
+---
+
+```{r echo=FALSE, out.width="75%", fig.align="left"}
 knitr::include_graphics("img/excel.png")
 ```
 
@@ -145,7 +157,7 @@ knitr::include_graphics("img/data-science-cycle/data-science-cycle.006.png")
 ---
 
 .pull-left[
-```{r echo=FALSE, out.width="75%", fig.align="left"}
+```{r echo=FALSE, out.width="100%", fig.align="left"}
 knitr::include_graphics("img/google-trend-index.png")
 ```
 ]
