--- a/exercises/e-01-carbon-emissions/carbon-emissions.Rmd
+++ b/exercises/e-01-carbon-emissions/carbon-emissions.Rmd
@@ -1,8 +1,11 @@
 ---
 title: "Global CO2 Emissions"
 author: "Gavin McNicol"
-output: html_document
-
+date: "`r Sys.Date()`"
+output:
+  html_document: 
+    toc: yes
+    toc_float: yes
 ---
 
 ## Introduction
