updated d02-toolkit text

--- a/slides/u1-d02-toolkit-r/u1-d02-toolkit-r.Rmd
+++ b/slides/u1-d02-toolkit-r/u1-d02-toolkit-r.Rmd
@@ -28,11 +28,13 @@ library(lubridate)
 .pull-left[
 ### .gray[Course operation]
 .gray[
-- introds.org
-- Learn
-- Zoom
-- Teams
-- Piazza
+- Blackboard
+  - Syllabus
+  - Lectures
+  - Exercises
+  - Labs and Homework
+  - Final Project
+  - Grades*
 ]
 ]
 .pull-right[
