--- a/hw/hw-01/hw-01-earthquakes.Rmd
+++ b/hw/hw-01/hw-01-earthquakes.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "HW 01 - Pet names"
-subtitle: "Mett the toolkit"
+title: "HW 01 - Earthquakes"
+subtitle: "Meet the toolkit"
 output: 
   tufte::tufte_html:
     css: ../hw.css
@@ -184,7 +184,7 @@ This might feel cumbersome.
 Bear with me... I *will* teach you how to save your password so you don't have to enter it every time.
 But for this one assignment you'll have to manually enter each time you push in order to gain some experience with it.
 
-**Thought exercise:** Which of the above steps (updating the YAML, committing, and pushing) needs to talk to GitHub?[^hw-01-pet-names-1]
+**Thought exercise:** Which of the above steps (updating the YAML, committing, and pushing) needs to talk to GitHub?[^1]
 
 # Packages
 
@@ -349,4 +349,4 @@ ggplot(comb_name_props, aes(x = cat_prop, y = dog_prop)) +
 
 🧶 ✅ ⬆️ *Now is a good time to commit and push your changes to GitHub with an appropriate commit message. Commit and push all changed files so that your Git pane is cleared up afterwards. Make sure that your last push to the repo comes before the deadline. You should confirm that what you committed and pushed are indeed in your repo that we will see by visiting your repo on GitHub.*
 
-[^hw-01-pet-names-1]: Only pushing requires talking to GitHub, this is why you're asked for your password at that point.
+[^1]: Only pushing requires talking to GitHub, this is why you're asked for your password at that point.
