--- a/starters/lab/lab-01-hello-r/lab-01.Rmd
+++ b/starters/lab/lab-01-hello-r/lab-01.Rmd
@@ -46,7 +46,8 @@ Add code and narrative as needed.
 Note that the R chunks are labelled with `plot-star` and `cor-star` to provide spaces to place the code for plotting and calculating the correlation coefficient.
 To finish, clean up the narrative by removing these instructions.
 
-Blah blah blah...
+I'm some text, you should replace me with more meaningful text...
+(Hint: describe what are you doing in the next code chunk)
 
 ```{r plot-star}
 
